--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -1,9 +1,14 @@
-<h3>Heroe <small>nombre ...</small></h3>
+<h3>Heroe <small>{{heroe.nombre}}</small></h3>
 <hr>
 
 <button [routerLink]="['heroes']"
 class="btn btn-outline-danger" >
   Regresar
+</button>
+
+<button (click)="agregarNuevo(forma)"
+class="btn btn-outline-success" >
+  Nuevo Héroe
 </button>
 
 <div class="row animated fadeIn fast">
