--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -21,19 +21,39 @@
             <th>#</th>
             <th>Nombre</th>
             <th>Casa</th>
-            <th>Opciones</th>
+            <th class="text-right">Opciones</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+          <tr *ngFor="let k of heroes | keys; let i = index">
+            <th scope="row">{{ i + 1}}</th>
+            <td>{{heroes[k].nombre}}</td>
+            <td>{{heroes[k].casa}}</td>
+            <td class="text-right w230">
+              <button [routerLink] = "['/heroe', k]"
+              type="button" class="btn btn-outline-success">
+                Editar
+              </button>
+              <button (click)="borrarHeroe(k)"
+              type="button" class="btn btn-outline-danger">
+                Borrar
+              </button>
+            </td>
           </tr>
         </tbody>
 
       </table>
+
+      <div *ngIf="(heroes | keys).length === 0 && !loading"
+      class="alert alert-info" role="alert">
+        <strong>No hay registros que mostrar</strong>
+      </div>
+
+      <div *ngIf="loading"
+      class="alert alert-warning" role="alert">
+        <strong>Cargando...</strong> por favor espere
+      </div>
+
     </div>
   </div>
 </div>
